# safe-map-cache

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  fuzz.yml
benches/: bench_cache.rs
docs/: FUZZING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ops.rs
src/: cache.rs  lib.rs  mmap.rs
tests/: fuzz_like.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  proptest_ops.rs
