[package]
name = "safe-map-cache"
version = "0.1.0"
edition = "2024"
authors = ["Mohtashim Nawaz"]
description = "A safe, concurrent memory-mapped LRU cache with a persisted on-disk index and compaction."
readme = "README.md"
license = "MIT"
keywords = ["mmap", "cache", "lru", "mmap-cache"]
categories = ["database", "caching"]

[dependencies]
memmap2 = "0.6"
parking_lot = "0.12"
thiserror = "1.0"
lru = "0.8"

[dev-dependencies]
tempfile = "3.5"
criterion = "0.5"
proptest = "1.0"
rand = "0.8"
